--- a/views/playbook.hbs
+++ b/views/playbook.hbs
@@ -1,11 +1,30 @@
-
-<h2>{{playbooks.0.playbookName}}</h2>
-<p>content content content 1</p>
-{{#each playbooks.0.maps}}
-<h4>{{mapName}}</h4>
-    {{#each plays}}
-        <p>{{playName}}</p>
+<style>
+.maps {
+    border: 1px solid blue;
+    width: 30%;
+    height: 100%;
+    float: left;
+} 
+.plays {
+    border: 1px solid blue;
+    width: 70%;
+    height: 100%;
+}
+</style>
+<div id="playbook-overview" class="playbook-overview">
+<div id="maps" class="maps">
+    {{#each playbook.maps}}
+        <li><a href="#" id="{{mapName}}" class="map">{{mapName}}</a></li>
     {{/each}}
-{{/each}}
+</div>
+<div id="plays" class="plays">
+    {{#each playbook.maps}}
+        {{#each plays}}
+            <li><a href="#" id="{{playName}}" class="play">{{playName}}</a></li>
+        {{/each}}
+    {{/each}}
+</div>
 
+</div>
 
+    
