setup dataaccess online

--- a/views/side-nav.hbs
+++ b/views/side-nav.hbs
@@ -1,6 +1,6 @@
 <ul>
     <li><a href="#" id="home" class="nav"><i class="fa fa-home"></i></a></li>
-    {{#each playbooks}}
+    {{#each .}}
         <li><a href="#" id="{{playbookName}}" class="nav"><i class="fa fa-book"></i></a></li>
     {{/each}}
 
