--- a/views/playbook-overview.hbs
+++ b/views/playbook-overview.hbs
@@ -1,6 +1,6 @@
 <style>
 .maps {
-    border: 1px solid blue;
+   /* border: 1px solid blue;*/
     width: 30%;
     height: 100%;
     display: inline-block; /*Display inline and maintain block characteristics.*/
@@ -8,7 +8,7 @@
     
 } 
 .plays {
-    border: 1px solid red;
+   /* border: 1px solid red;*/
     width: 60%;
     height: 100%;
     display: inline-block; /*Display inline and maintain block characteristics.*/
