--- a/views/playbook-overview-plays.hbs
+++ b/views/playbook-overview-plays.hbs
@@ -1,9 +1,14 @@
 {{#each plays}}
     <li>
-        <a href="#" id="{{playName}}" class="play">{{playName}}</a>
+        <a href="#" id="{{playName}}" class="play">{{playName}}</a>        
     </li>
 {{/each}}
+<button id="addPlay">Add Play</button>
 
 <script>
     var controller = require("./lib/playbook-overview");
+
+    $("#addPlay").on("click", function() {
+        viewEventHandler.emit("view-selected", "main", "add-play");  
+    })
 </script>
