--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,8 @@ body {
   position: absolute;
   top:0;
   bottom: 0;
+  padding-left:0px;
+  
 }
 #page-name {
   position: absolute; 
@@ -23,6 +25,8 @@ body {
   padding-left:10px;
 }
 #top-bar {
+  padding-left:0px;
+  
   text-align: left;
   background-color: #f5f5f5;
   height:40px;
@@ -77,4 +81,5 @@ body {
 #wrapper {
   min-width: 800px;
   height: 100%;
+  padding-left:0px;
 }
