--- a/css/app.css
+++ b/css/app.css
@@ -6,10 +6,12 @@ body {
   font-family: "Lucida Grande", "Segoe UI", Ubuntu, Cantarell, Arial, sans-serif;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
+
 #side-nav {
-  background-color: #000;
+  background-color: #1E2124;
   padding-top: 18px;
   width:71px;
   position: absolute;
@@ -28,13 +30,14 @@ body {
   padding-left:0px;
   
   text-align: left;
-  background-color: #f5f5f5;
+  background-color: #2E3136;
   height:40px;
   position: absolute;
   left:71px;
   top:0;
   right:0;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #24272B;
+  color:white;
 }
 #top-bar a {
   color: #de8d4b
@@ -60,6 +63,9 @@ body {
   top: 40px;
   bottom: 0;
   right:0;
+  background-color: #36393E ;
+  overflow-y: auto;
+  color:white;
 }
 #side-nav ul {
   list-style: none;
@@ -72,10 +78,10 @@ body {
 
 #side-nav a {
   font-size: 2rem;
-  color:#555
+  color:#00BC8C;
 }
 #side-nav a:hover {
-  color: #52affb
+  color: #00DBA3
 }
 
 #wrapper {
