--- a/views/side-nav.hbs
+++ b/views/side-nav.hbs
@@ -1,7 +1,7 @@
 <ul>
-    <li><a href="#" id="home" class="nav-home"><i class="fa fa-home"></i></a></li>
+    <li><a href="#" id="home" class="nav-home"><i class="fa fa-home fa-lg"></i></a></li>
     {{#each .}}
-        <li><a href="#" id="{{_id}}" class="nav"><i class="fa fa-book"></i></a></li>
+        <li><a href="#" id="{{_id}}" class="nav"><i class="fa fa-book fa-lg"></i></a></li>
     {{/each}}
-    <li><a href="#" id="add-playbook" class="nav-add"><i class="fa fa-plus"></i></a></li>
+    <li><a href="#" id="add-playbook" class="nav-add"><i class="fa fa-plus fa-lg"></i></a></li>
 </ul>
