--- a/views/add-play.hbs
+++ b/views/add-play.hbs
@@ -12,31 +12,31 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Role #1</label>
                     <div class="col-md-10">
-                        <textarea id="role1" cols="30" rows="4" placeholder="Enter play steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
+                        <textarea id="role1" cols="30" rows="4" placeholder="Enter role steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
                     </div>                    
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Role #2</label>
                     <div class="col-md-10">
-                        <textarea id="role2" cols="30" rows="4" placeholder="Enter play steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
+                        <textarea id="role2" cols="30" rows="4" placeholder="Enter role steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
                     </div>                    
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Role #3</label>
                     <div class="col-md-10">
-                        <textarea id="role3" cols="30" rows="4" placeholder="Enter play steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
+                        <textarea id="role3" cols="30" rows="4" placeholder="Enter role steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
                     </div>                    
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Role #4</label>
                     <div class="col-md-10">
-                        <textarea id="role4" cols="30" rows="4" placeholder="Enter play steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
+                        <textarea id="role4" cols="30" rows="4" placeholder="Enter role steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
                     </div>                    
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Role #5</label>
                     <div class="col-md-10">
-                        <textarea id="role5" cols="30" rows="4" placeholder="Enter play steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
+                        <textarea id="role5" cols="30" rows="4" placeholder="Enter role steps..." style="resize: vertical" rows=8  class="form-control"></textarea>
                     </div>                    
                 </div> 
                 <div class="form-group">
