--- a/css/app.css
+++ b/css/app.css
@@ -89,3 +89,11 @@ body {
   height: 100%;
   padding-left:0px;
 }
+
+
+.tooltip.right .tooltip-inner {
+    background-color:#00BC8C;
+  }
+.tooltip.right .tooltip-arrow {
+          border-right-color: #00BC8C;
+       }
