insert play functionality

--- a/views/playbook-overview-plays.hbs
+++ b/views/playbook-overview-plays.hbs
@@ -1,18 +1,11 @@
 
-        <div class="list-group">            
-                <button type="button" style="margin-bottom:1px" class="map list-group-item">test1</button>
-                <button type="button" style="margin-bottom:1px" class="map list-group-item">test1</button>
-                <button type="button" style="margin-bottom:1px" class="map list-group-item">test1</button>     
-                <button class="btn btn-success col-md-3 col-md-offset-9" id="addPlay">Add Play</button>        
-        </div>
-    <!--<li>
-        <a href="#" id="{{playName}}" class="play">{{playName}}</a> 
-    </li>-->
-
-{{#each plays}}
-
-{{/each}}
-
+<div class="list-group">           
+    {{#each plays}}
+        <button type="button" style="margin-bottom:1px" class="map list-group-item">{{playName}}</button>
+    {{/each}}       
+</div>
+<button class="btn btn-success col-md-3 col-md-offset-9" id="addPlay">Add Play</button>
+   
 <script>
     var controller = require("./lib/playbook-overview");
 
