--- a/views/side-nav.hbs
+++ b/views/side-nav.hbs
@@ -8,6 +8,8 @@
 
 <script>
 $(document).ready(function(){
-    $('[data-toggle="tooltip"]').tooltip(); 
+    $('[data-toggle="tooltip"]').tooltip({
+        trigger: 'hover'
+    }); 
 });
 </script>
