--- a/views/welcome.hbs
+++ b/views/welcome.hbs
@@ -1,7 +1,9 @@
 <h3>Welcome! please login.</h3>
 <form id="account" action="#">
-  <input id="accountInput" type="text" value="Account Name">
-  <input type="submit" value="Submit">
+    <div class="col-md-5">
+         <input class="form-control" id="accountInput" type="text" value="Account Name"/>
+    </div>
+  <input class="btn btn-success"type="submit" value="Submit"/>
 </form>
 
 <script>
