--- a/views/top-bar.hbs
+++ b/views/top-bar.hbs
@@ -1,3 +1,7 @@
 <div id="page-name" class="page-name">
-        {{pageName}}
+       {{#if pageName}}
+                {{pageName}}
+        {{else}}
+                E-sports Playbook
+        {{/if}}
 </div>
