--- a/css/app.css
+++ b/css/app.css
@@ -68,6 +68,26 @@ body {
   color:white;
 }
 
+#main::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #36393E;
+}
+
+#main::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #36393E;
+}
+
+#main::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #1E2124;
+}
+
 #side-nav ul {
   list-style: none;
   padding: 19px;
