--- a/views/play-view.hbs
+++ b/views/play-view.hbs
@@ -1,4 +1,5 @@
 <div class="col-md-10">
+    <button class="btn-sm btn btn-success pull-right" id="backToSelectedMap">Back to Map</button>
     {{#each roles}}
     <div style="margin-bottom:10px; border-bottom: 1px solid #F39C12" class="row">
         <div class="col-md-12">
@@ -13,7 +14,7 @@
     {{/each}}    
 </div>
 
-<button id="backToSelectedMap">Back to Map</button>
+
 <script>
     var controller = require("./lib/playbook-overview");
 
