--- a/views/add-playbook.hbs
+++ b/views/add-playbook.hbs
@@ -4,14 +4,11 @@
         <fieldset>
         <div class="form-group">
             <label class="col-md-2 control-label">Name</label>
-            <div class="col-md-10">
+            <div class="col-md-6">
                 <input class="form-control" id="playbookName" type="text" placeholder="Enter Playbook Name...">
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-2 col-md-offset-10">
-                    <input class="btn btn-success" type="submit" value="Submit">                
-            </div>
+            <input class="btn btn-success col-md-2" type="submit" value="Submit">                
+            
         </div>
         </fieldset>                        
     </form>
