--- a/views/playbook-overview.hbs
+++ b/views/playbook-overview.hbs
@@ -16,28 +16,33 @@
     
 }
 </style>
-<div id="playbook-overview" class="col-md-8 playbook-overview">
+<div id="playbook-overview" class="col-md-12 playbook-overview">
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-4 col-md-offset-9">
+            <button class="btn btn-danger" id="deletePlaybook">Delete Playbook</button>               
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="col-md-3">
             <h4>Maps</h4> 
         </div>
-        <div id="playsHeader" class="col-md-7" style="visibility: hidden">
+        <div id="playsHeader" class="col-md-9" style="visibility: hidden">
             <h4>Plays</h4>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-5" id="maps" class="maps">
+        <div class="col-md-3" id="maps" class="maps">
             <div class="list-group">            
                 {{#each maps}}
                     <button type="button" style="margin-bottom:1px" id="{{mapName}}" class="map list-group-item">{{mapName}}<span class="badge">{{plays.length}}</span></button>
                 {{/each}}
             </div>
         </div>
-        <div class="col-md-7" id="plays" class="plays">
+        <div class="col-md-9" id="plays" class="plays">
 
         </div>
     </div>
-    <button class="btn btn-danger" id="deletePlaybook">Delete Playbook</button>    
 </div>
 
 <script>
